--- a/index.html
+++ b/index.html
@@ -35,13 +35,11 @@ full_posts: 3
     <div class="sidebar-item">
     <dl>
       <dt>邮件：</dt>
-      <dd>dongyongzhou AT gmail.com </dd>
+      <dd>dongyongzhou@gmail.com </dd>
 
       <dt>微博：</dt>
-      <dd><a href="http://weibo.com/gotgit">http://weibo.com/gotgit</a></dd>
+      <dd><a href="http://t.qq.com/eastream">http://t.qq.com/eastream</a></dd>
 
-      <dt>公司：</dt>
-      <dd><a href="http://www.ossxp.com/">http://www.ossxp.com</a></dd>
     </dl>
 
     </div>
