--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ full_posts: 3
       <dd>dongyongzhou@gmail.com </dd>
 
       <dt>微博：</dt>
-      <dd><a href=http://t.qq.com/eastream></a>"腾讯微博"</dd>
+      <dd><a href="http://t.qq.com/eastream"></a>腾讯微博</dd>
 
     </dl>
 
