--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ full_posts: 3
   <div class='sidebar'>
     <div class="sidebar-item">
       <a href='/about.html'><img
-         src="images/dongyong.jpg" alt="Photo"><br></a>
+         src="images/dongyong2.jpg" alt="Photo"><br></a>
       <ul>
     </div>
   </div>
