--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
----
+﻿---
 layout: master
 title: DonGYonG
 full_posts: 3
@@ -38,8 +38,8 @@ full_posts: 3
       <dd>dongyongzhou@gmail.com </dd>
 
       <dt>微博：</dt>
+      <dd><a href="http://weibo.com/u/1892663980">新浪微博</a></dd>
       <dd><a href="http://t.qq.com/eastream">腾讯微博</a></dd>
-
     </dl>
 
     </div>
