--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ full_posts: 3
       <dd>dongyongzhou@gmail.com </dd>
 
       <dt>微博：</dt>
+      <dd><a href="http://www.weibo.com/u/1892663980">新浪微博</a></dd>
       <dd><a href="http://t.qq.com/eastream">腾讯微博</a></dd>
 
     </dl>
